feat: 백엔드 비즈니스 로직 수정 #390